// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on default data 1`] = `
<div
  className="permissions-tree"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      Permission
    </div>
    <div
      className="permission-description"
    >
      Description
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      code="all"
      combined={false}
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "code": "teams",
            "permissions": Array [
              Object {
                "code": "send_invites",
                "combined": true,
                "permissions": Array [
                  "invite_user",
                  "get_public_link",
                  "add_user_to_team",
                ],
              },
              "create_team",
            ],
          },
          Object {
            "code": "public_channel",
            "permissions": Array [
              "create_public_channel",
              "manage_public_channel_properties",
              "manage_public_channel_members",
              "delete_public_channel",
              "join_public_channels",
              "read_public_channel",
            ],
          },
          Object {
            "code": "private_channel",
            "permissions": Array [
              "create_private_channel",
              "manage_private_channel_properties",
              "manage_private_channel_members",
              "delete_private_channel",
            ],
          },
          Object {
            "code": "posts",
            "permissions": Array [
              "create_post",
              "edit_post",
              Object {
                "code": "delete_posts",
                "permissions": Array [
                  "delete_post",
                  "delete_others_posts",
                ],
              },
              Object {
                "code": "reactions",
                "permissions": Array [
                  "add_reaction",
                  "remove_reaction",
                ],
              },
            ],
          },
          Object {
            "code": "integrations",
            "permissions": Array [
              "manage_webhooks",
              "manage_others_webhooks",
              "manage_oauth",
              "manage_system_wide_oauth",
              "manage_slash_commands",
              "manage_others_slash_commands",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on read only 1`] = `
<div
  className="permissions-tree"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      Permission
    </div>
    <div
      className="permission-description"
    >
      Description
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      code="all"
      combined={false}
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "code": "teams",
            "permissions": Array [
              Object {
                "code": "send_invites",
                "combined": true,
                "permissions": Array [
                  "invite_user",
                  "get_public_link",
                  "add_user_to_team",
                ],
              },
              "create_team",
            ],
          },
          Object {
            "code": "public_channel",
            "permissions": Array [
              "create_public_channel",
              "manage_public_channel_properties",
              "manage_public_channel_members",
              "delete_public_channel",
              "join_public_channels",
              "read_public_channel",
            ],
          },
          Object {
            "code": "private_channel",
            "permissions": Array [
              "create_private_channel",
              "manage_private_channel_properties",
              "manage_private_channel_members",
              "delete_private_channel",
            ],
          },
          Object {
            "code": "posts",
            "permissions": Array [
              "create_post",
              "edit_post",
              Object {
                "code": "delete_posts",
                "permissions": Array [
                  "delete_post",
                  "delete_others_posts",
                ],
              },
              Object {
                "code": "reactions",
                "permissions": Array [
                  "add_reaction",
                  "remove_reaction",
                ],
              },
            ],
          },
          Object {
            "code": "integrations",
            "permissions": Array [
              "manage_webhooks",
              "manage_others_webhooks",
              "manage_oauth",
              "manage_system_wide_oauth",
              "manage_slash_commands",
              "manage_others_slash_commands",
            ],
          },
        ]
      }
      readOnly={true}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on system scope 1`] = `
<div
  className="permissions-tree"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      Permission
    </div>
    <div
      className="permission-description"
    >
      Description
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      code="all"
      combined={false}
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "code": "teams",
            "permissions": Array [
              Object {
                "code": "send_invites",
                "combined": true,
                "permissions": Array [
                  "invite_user",
                  "get_public_link",
                  "add_user_to_team",
                ],
              },
              "create_team",
            ],
          },
          Object {
            "code": "public_channel",
            "permissions": Array [
              "create_public_channel",
              "manage_public_channel_properties",
              "manage_public_channel_members",
              "delete_public_channel",
              "join_public_channels",
              "read_public_channel",
            ],
          },
          Object {
            "code": "private_channel",
            "permissions": Array [
              "create_private_channel",
              "manage_private_channel_properties",
              "manage_private_channel_members",
              "delete_private_channel",
            ],
          },
          Object {
            "code": "posts",
            "permissions": Array [
              "create_post",
              "edit_post",
              Object {
                "code": "delete_posts",
                "permissions": Array [
                  "delete_post",
                  "delete_others_posts",
                ],
              },
              Object {
                "code": "reactions",
                "permissions": Array [
                  "add_reaction",
                  "remove_reaction",
                ],
              },
            ],
          },
          Object {
            "code": "integrations",
            "permissions": Array [
              "manage_webhooks",
              "manage_others_webhooks",
              "manage_oauth",
              "manage_system_wide_oauth",
              "manage_slash_commands",
              "manage_others_slash_commands",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="system_scope"
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on team scope 1`] = `
<div
  className="permissions-tree"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      Permission
    </div>
    <div
      className="permission-description"
    >
      Description
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      code="all"
      combined={false}
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "code": "teams",
            "permissions": Array [
              Object {
                "code": "send_invites",
                "combined": true,
                "permissions": Array [
                  "invite_user",
                  "get_public_link",
                  "add_user_to_team",
                ],
              },
              "create_team",
            ],
          },
          Object {
            "code": "public_channel",
            "permissions": Array [
              "create_public_channel",
              "manage_public_channel_properties",
              "manage_public_channel_members",
              "delete_public_channel",
              "join_public_channels",
              "read_public_channel",
            ],
          },
          Object {
            "code": "private_channel",
            "permissions": Array [
              "create_private_channel",
              "manage_private_channel_properties",
              "manage_private_channel_members",
              "delete_private_channel",
            ],
          },
          Object {
            "code": "posts",
            "permissions": Array [
              "create_post",
              "edit_post",
              Object {
                "code": "delete_posts",
                "permissions": Array [
                  "delete_post",
                  "delete_others_posts",
                ],
              },
              Object {
                "code": "reactions",
                "permissions": Array [
                  "add_reaction",
                  "remove_reaction",
                ],
              },
            ],
          },
          Object {
            "code": "integrations",
            "permissions": Array [
              "manage_webhooks",
              "manage_others_webhooks",
              "manage_oauth",
              "manage_system_wide_oauth",
              "manage_slash_commands",
              "manage_others_slash_commands",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="team_scope"
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot with parentRole with permissions 1`] = `
<div
  className="permissions-tree"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      Permission
    </div>
    <div
      className="permission-description"
    >
      Description
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      code="all"
      combined={false}
      key="all"
      onChange={[Function]}
      parentRole={
        Object {
          "permissions": "invite_user",
        }
      }
      permissions={
        Array [
          Object {
            "code": "teams",
            "permissions": Array [
              Object {
                "code": "send_invites",
                "combined": true,
                "permissions": Array [
                  "invite_user",
                  "get_public_link",
                  "add_user_to_team",
                ],
              },
              "create_team",
            ],
          },
          Object {
            "code": "public_channel",
            "permissions": Array [
              "create_public_channel",
              "manage_public_channel_properties",
              "manage_public_channel_members",
              "delete_public_channel",
              "join_public_channels",
              "read_public_channel",
            ],
          },
          Object {
            "code": "private_channel",
            "permissions": Array [
              "create_private_channel",
              "manage_private_channel_properties",
              "manage_private_channel_members",
              "delete_private_channel",
            ],
          },
          Object {
            "code": "posts",
            "permissions": Array [
              "create_post",
              "edit_post",
              Object {
                "code": "delete_posts",
                "permissions": Array [
                  "delete_post",
                  "delete_others_posts",
                ],
              },
              Object {
                "code": "reactions",
                "permissions": Array [
                  "add_reaction",
                  "remove_reaction",
                ],
              },
            ],
          },
          Object {
            "code": "integrations",
            "permissions": Array [
              "manage_webhooks",
              "manage_others_webhooks",
              "manage_oauth",
              "manage_system_wide_oauth",
              "manage_slash_commands",
              "manage_others_slash_commands",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="system_scope"
    />
  </div>
</div>
`;
